--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= BlackJack in Erlang -- Author: Yuandong Chen 2018
+= BlackJack in Erlang
 
 To try this example, you need GNU `make` and `git` in your PATH.
 
